--- a/team_project/templates/Notes/add_note.html
+++ b/team_project/templates/Notes/add_note.html
@@ -1,1 +1,7 @@
-{% %}
+{% extends "index.html" %}
+
+{% block content %}
+<form method="POST">
+    {{ form.as_p }}
+    <input type="submit" value=""
+</form>
