--- a/team_project/templates/Notes/notes_detail.html
+++ b/team_project/templates/Notes/notes_detail.html
@@ -1,8 +1,7 @@
 {% extends "index.html" %}
 
 {% block content %}
-<hi>{ Note.title }</hi>
-<div>{ note.body }</div>
-<div>{note.when_created }</div>
-
+<hi>{{ Note.title }}</hi>
+<div>{{ note.body }}</div>
+<div>{{ note.when_created }}</div>
 {% end block %}
