--- a/team_project/templates/Notes/add_note.html
+++ b/team_project/templates/Notes/add_note.html
@@ -1,7 +1,8 @@
-{% extends "index.html" %}
+{% extends "base.html" %}
 
 {% block content %}
 <form method="POST">
+    {% csrf_token %}
     {{ form.as_p }}
-    <input type="submit" value=""
+    <input type="submit" value="Add Note"
 </form>
