--- a/team_project/templates/Notes/note_detail.html
+++ b/team_project/templates/Notes/note_detail.html
@@ -3,5 +3,5 @@
 {% block content %}
     <div>{{ Note.note_title }}</div>
     <div>{{ note.note_text }}</div>
-    <div>{{ note.when_created }}</div>
+    <div>{{ note.date_created }}</div>
 {% end block %}
