--- a/team_project/templates/Notes/note_list.html
+++ b/team_project/templates/Notes/note_list.html
@@ -5,7 +5,7 @@
 {% block content %}
     <h1>Notes</h1>
     {% for note in object_list %}
-        <p><a href="{% url 'notes_detail' note.pk %}">{{ note.note_title }}</a></p>
+        <p><a href="{% url 'note_detail' note.pk %}">{{ note.note_title }}</a></p>
     {% endfor %}
     <p><a href="{% url 'notes_create' %}">Add Note</a></p>
 {% endblock %}
