--- a/team_project/templates/Notes/note_detail.html
+++ b/team_project/templates/Notes/note_detail.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %}
 
 {% block content %}
-    <div>{{ Note.note_title }}</div>
-    <div>{{ note.note_text }}</div>
-    <div>{{ note.date_created }}</div>
-{% end block %}
+    <p>{{ note.note_title }}</p>
+    <p>{{ note.note_text }}</p>
+    <p>{{ note.date_created }}</p>
+{% endblock %}
