--- a/team_project/templates/Notes/note_create.html
+++ b/team_project/templates/Notes/note_create.html
@@ -4,5 +4,6 @@
 <form method="POST">
     {% csrf_token %}
     {{ form.as_p }}
-    <input type="submit" value="Add Note"
+    <input type="submit" value="Add Note">
 </form>
+{% endblock %}
